tests/reference/asr-implicit13-4b9822a.stderr
semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
 --> tests/implicit13.f90:2:1
  |
2 | implicit integer (a,b-c), integer*4 (d-e), integer*8 (f-g), real (h)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
